--- a/interpreter/Rakefile
+++ b/interpreter/Rakefile
@@ -1,5 +1,7 @@
 task default: :test
 
+ENV['PATH'] = "#{File.expand_path('../bin', __dir__)}:#{ENV['PATH']}"
+
 # really, just made this to document how to run the tests
 desc 'Run tests'
 task :test do
