--- a/interpreter/Rakefile
+++ b/interpreter/Rakefile
@@ -1,10 +1,10 @@
 task default: :test
 
+# add parent bin dir to PATH
 ENV['PATH'] = "#{File.expand_path('../bin', __dir__)}:#{ENV['PATH']}"
 
 # really, just made this to document how to run the tests
 desc 'Run tests'
 task :test do
-  sh 'haxe compile.hxml'
-  sh 'neko runtests.n'
+  sh 'haxe -main ruby.RunTests -cp src -cp test --interp'
 end
