Centralize and prune ideas, add deps to Gemfile
For some reason, running the rake tasks w/ Bundler messes up
(gets confused about where the spec dir is), unless I explicitly
set the `BUNDLE_GEMFILE` before going into rake. I was in the
parser dir when I did this. Not really clear where I should
put the Rakefile and Gemfile

--- a/parser/Gemfile
+++ b/parser/Gemfile
@@ -2,9 +2,11 @@ source 'https://rubygems.org'
 
 gem 'parser'
 gem 'rack'
+gem 'puma'
 
 group :test, :development do
   gem 'pry'
+  gem 'rake'
 end
 
 group :test do
