--- a/interpreter/package.json
+++ b/interpreter/package.json
@@ -1,1 +1,1 @@
-{"private":true,"name":"ruby_slippers_for_the_cobblers_children","scripts":{"test":"gulp test"},"devDependencies":{"gulp":"~3.8","babel":"~4.7","mocha":"~2.2"}}
+{"private":true,"name":"ruby_slippers_for_the_cobblers_children","scripts":{"test":"gulp test","exec":"exec"},"devDependencies":{"gulp":"~3.8","babel":"~4.7","mocha":"~2.2"}}
