--- a/interpreter/bin/build
+++ b/interpreter/bin/build
@@ -25,7 +25,7 @@ build = Build.new(
     private: true, # prevent npm from publishing this
     name:    "ruby_slippers_for_the_cobblers_children",
     scripts: {
-      test: "node node_modules/.bin/_mocha test.js",
+      test: "node node_modules/.bin/_mocha test",
       exec: 'exec',
     },
     devDependencies: {
