--- a/interpreter/package.json
+++ b/interpreter/package.json
@@ -1,1 +1,1 @@
-{"private":true,"name":"ruby_slippers_for_the_cobblers_children","scripts":{"test":"node node_modules/.bin/_mocha test","exec":"exec"},"devDependencies":{"gulp":"~3.8","babel":"~4.7","mocha":"~2.2"}}
+{"private":true,"name":"ruby_slippers_for_the_cobblers_children","scripts":{"test":"babel-node node_modules/.bin/_mocha test","exec":"exec","env":"env"},"devDependencies":{"gulp":"~3.8","babel":"~4.7","mocha":"~2.2"},"files":["src"]}
