--- a/interpreter/bin/build
+++ b/interpreter/bin/build
@@ -26,7 +26,7 @@ build    = Build.new(
     private: true, # prevent npm from publishing this
     name:    "ruby_slippers_for_the_cobblers_children",
     scripts: {
-      test: "babel-node node_modules/.bin/_mocha test",
+      test: "NODE_PATH=src babel-node node_modules/.bin/_mocha test",
       exec: 'exec',
       env:  'env',
     },
