--- a/interpreter/package.json
+++ b/interpreter/package.json
@@ -1,1 +1,17 @@
-{"private":true,"name":"ruby_slippers_for_the_cobblers_children","scripts":{"test":"NODE_PATH=src babel-node node_modules/.bin/_mocha test","exec":"exec","env":"env"},"devDependencies":{"gulp":"~3.8","babel":"~4.7","mocha":"~2.2"},"files":["src"]}
+{
+  "private": true,
+  "name": "ruby_slippers_for_the_cobblers_children",
+  "scripts": {
+    "test": "NODE_PATH=src babel-node node_modules/.bin/_mocha test",
+    "exec": "exec",
+    "env": "env"
+  },
+  "devDependencies": {
+    "gulp": "~3.8",
+    "babel": "~4.7",
+    "mocha": "~2.2"
+  },
+  "files": [
+    "src"
+  ]
+}
