--- a/interpreter/package.json
+++ b/interpreter/package.json
@@ -9,7 +9,8 @@
   "devDependencies": {
     "babel": "~4.7",
     "jshint": "^2.8.0",
-    "mocha": "~2.2"
+    "mocha": "~2.2",
+    "js-beautify": "~1.5.10"
   },
   "files": [
     "src"
